WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226368
The jsc shell should not continue executing after a termination has been received.
https://bugs.webkit.org/show_bug.cgi?id=226368
Summary
The jsc shell should not continue executing after a termination has been rece...
Mark Lam
Reported
2021-05-28 01:12:56 PDT
rdar://78013374
Attachments
proposed patch.
(5.05 KB, patch)
2021-05-28 01:21 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2021-05-28 01:21:42 PDT
Created
attachment 429996
[details]
proposed patch. Let's try this on the EWS first.
Mark Lam
Comment 2
2021-05-28 09:46:19 PDT
Comment on
attachment 429996
[details]
proposed patch. Thanks for the review. Landing now.
EWS
Comment 3
2021-05-28 09:58:46 PDT
Committed
r278206
(
238249@main
): <
https://commits.webkit.org/238249@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429996
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug