The jsc shell should not continue executing after a termination has been received. https://bugs.webkit.org/show_bug.cgi?id=226368 rdar://78013374

Reviewed by Saam Barati.

This patch makes the jsc shell forbid execution in all the places that it has
caught and seen a TerminationException.

* jsc.cpp:
(JSC_DEFINE_HOST_FUNCTION):
(checkException):
(runWithOptions):
(runInteractive):


Canonical link: https://commits.webkit.org/238249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278206 268f45cc-cd09-0410-ab3c-d52691b4dbfc